fix table jumping

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ a:not([href]) {
 }
 
 .hidden {
-  /*display: none;*/
+  display: none;
 }
 
 html, body {
@@ -148,7 +148,6 @@ a {
   /*background: #bdf;*/
   background: rgba(187,221,255,.75);
   box-shadow: 0 1px 3px rgba(0,0,0,.25);
-  /*position: fixed;*/
   top: 0;
   z-index: 1;
   left: 0;
@@ -163,25 +162,11 @@ nav a {
 .header:before {
   border-bottom: 2px solid rgba(0,0,0,.1);
   border-top: 2px solid rgba(255,255,255,.5);
-  /*border-top: 4px ridge rgba(255,255,255,.5);*/
   content: "";
   position: absolute;
   top: 78px;
   width: 100%;
   z-index: 1;
-}
-
-.header + * {
-/*
-  margin-top: 80px;
-*/
-}
-
-section {
-/*
-  margin-top: -80px;
-  padding-top: 80px;
-*/
 }
 
 nav a {
@@ -228,7 +213,6 @@ a.logo:before {
 }
 
 .massive {
-  display: block;
   font-size: 48px;
   font-weight: 600;
   line-height: 1;
@@ -280,6 +264,12 @@ masthead a:hover {
 
 .wrap-juicy {
   padding: 30px 0;
+}
+
+.benchmarks .wrap-juicy {
+  background: #fff;
+  border: 30px solid #248;
+  border-left-width: 155px;
 }
 
 .wrap-centre {
@@ -374,14 +364,16 @@ input, button, textarea {
   display: inline-block;
 }
 
+.benchmarks {
+  background: #248;
+}
+
 .faq {
   background: #fff5d7;
-  background-clip: content-box;
 }
 
 .resources {
   background: #fdd;
-  background-clip: content-box;
 }
 
 .footer {
@@ -448,6 +440,12 @@ tbody {
   color: rgba(0,0,0,.25);
 }
 
+/* Hide text in all cells other than the Benchmark title cell */
+.row-pending td + td,
+.row-pending td + td * {
+  color: transparent;
+}
+
 .row-group.row-pending,
 .table-striped tbody tr:nth-child(even).row-group.row-pending {
   background: rgba(221,238,255,.25);
@@ -501,12 +499,28 @@ small {
   visibility: visible;
 }
 
+.presentation-area {
+  display: none;
+}
+
+.presentation-area,
+iframe {
+  height: 145px;
+}
+
 iframe {
   border: 0;
   width: 100%;
 }
 
-#presentation-area,
-iframe {
-  height: 200px;
+[data-running] .presentation-area {
+  display: block;
+}
+
+.results-area {
+  margin-top: 10px;
+}
+
+.results-area h3 {
+  margin-top: 15px;
 }
